@@ -456,12 +456,12 @@ Where:
   <dd>
     A URL reference to a <a>'mask element'</a> element (for example ''url(commonmasks.xml#mask)'') or an <var>&lt;image&gt;</var>.
   </dd>
-  <dt><dfn>''child''</dfn></dt>
+  <dt>''child''</dt>
   <dd>
     A keyword to indicate that the last child <a>'mask element'</a>
     element should be used as the mask source. It is equivalent to
     ''select(mask:last-of-type)''.</dd>
-  <dt><dfn>'&lt;child-selector&gt;'</dfn></dt>
+  <dt>'&lt;child-selector&gt;'</dt>
   <dd>
     A comma-separated list of <a>compound selector</a>s scoped at the element to
     which the 'mask' property is applied.
@@ -1512,6 +1512,19 @@ If the second keyword is absent, it is assumed to be the same as the first.
     A basic shape function as defined in CSS3 Exclusions. The origin of clipping shapes is on the top left of the <span
     class=index>bounding client rect</span>. Percentage values are resolved against the
     <span class=index>bounding client rect</span> width and height. (See [[!CSS3-EXCLUSIONS]].)
+  </dd>
+  <dt>''child''</dt>
+  <dd>
+    A keyword to indicate that the last child <a>'clipPath element'</a>
+    element should be used as the clip source. It is equivalent to
+    ''select(clipPath:last-of-type)''.</dd>
+  <dt>'&lt;child-selector&gt;'</dt>
+  <dd>
+    A comma-separated list of <a>compound selector</a>s scoped at the element to
+    which the 'clip-path' property is applied.
+    The first matching element in <a>tree order</a> (as defined in [[!DOM]]) as
+    a result of evaluating the list of selectors is taken as the clip source.
+    If there are no matching elements the clip source is invalid.
   </dd>
 </dl>
 
