@@ -1,3 +1,7 @@
+2013-03-01 Brian Birtles <bbirtles@mozilla.com>
+	Clarify the meaning of 'child' when used with the 'clip-path' property.
+	Remove some overlapping definitions.
+
 2013-02-19  Dirk Schulze  <dschulze@adobe.com>
 	Rely on CSS Backgrounds and Border sepcification text as much as possible.
 
